# SFML_Geometry

./: CMakeLists.txt  run.bat
src/: Application.cpp  Application.h  BaseObject.cpp  BaseObject.h  main.cpp
src/include/: Application.h  BaseObject.h
